# FBGEMM

./: .bazelrc  .buildinfo  .clang-tidy  .gitignore  .gitmodules  .travis.yml  77__blackwell__fmha_8cu.html  77__blackwell__fmha__bwd_8cu.html  77__blackwell__fmha__gen_8cu.html  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile.FP16Benchmark.aarch64  Makefile.FPBenchmark.aarch64  OSC_CONTRIBUTIONS.md  README.md  WORKSPACE.bazel  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _code_cache_8h.html  _code_gen_helpers_8h.html  _conv_utils_8h.html  _direct_conv_8h.html  _embedding_sp_m_d_m_autovec_8h.html  _execute_kernel_8h.html  _execute_kernel_generic_8h.html  _execute_kernel_u8_s8_8h.html  _fbgemm_8h.html  _fbgemm_build_8h.html  _fbgemm_convert_8h.html  _fbgemm_embedding_8h.html  _fbgemm_f_p16_8h.html  _fbgemm_f_p16_u_kernels_avx2_8h.html  _fbgemm_f_p16_u_kernels_avx512_8h.html  _fbgemm_f_p16_u_kernels_avx512__256_8h.html  _fbgemm_f_p_common_8h.html  _fbgemm_i64_8h.html  _fbgemm_i8_depthwise2_d_avx2-inl_8h.html  (+1299 more)
bench/: AlignedVec.h  BenchUtils.cc  BenchUtils.h  CMakeLists.txt  Conv1DRequantizeBenchmark.cc  ConvUnifiedBenchmark.cc  ConvertBenchmark.cc  Depthwise3DBenchmark.cc  DepthwiseBenchmark.cc  EmbeddingIndexRemappingBenchmark.cc  EmbeddingQuantizeBenchmark.cc  EmbeddingQuantizeFloatToFloatOrHalfBenchmark.cc  EmbeddingQuantizeNBitToFloatOrHalfBenchmark.cc  EmbeddingSpMDM4BitBenchmark.cc  EmbeddingSpMDM8BitBenchmark.cc  EmbeddingSpMDMBenchmark.cc  EmbeddingSpMDMNBit2Benchmark.cc  EmbeddingSpMDMNBitBenchmark.cc  EmbeddingSpMDMNBitFp16Benchmark.cc  EmbeddingSpMDMNBitRowWiseSparseBenchmark.cc  EncodedAPackedReq32Benchmark.cc  EncodedBGEMMsBenchmark.cc  EncodedBIm2ColFusedRequantizeBenchmark.cc  EncodedBPackedReq32Benchmark.cc  FP16Benchmark.cc  FP32Benchmark.cc  FTGEMMsBenchmark.cc  FTPackedRequantizeAcc32Benchmark.cc  FakeFP16Benchmark.cc  Fused8BitRowwiseEmbeddingBenchmark.cc  GEMMsBenchmark.cc  GEMMsTunableBenchmark.cc  GroupwiseConvRequantizeBenchmark.cc  I64Benchmark.cc  I8SpmdmBenchmark.cc  Im2ColFusedRequantizeAcc16Benchmark.cc  Im2ColFusedRequantizeAcc32Benchmark.cc  Im2ColFusedRequantizeBenchmark.cc  PackedFloatInOutBenchmark.cc  PackedRequantizeAcc16Benchmark.cc  (+13 more)
demo/int_nbit_embedding_demo/: CMakeLists.txt  README.md  main.cpp  utils.h
fbgemm_gpu/: .clang-tidy  CMakeLists.txt  FbgemmGpu.cmake  README.md  atx_embeddingbag_split_asm_kernel.hsaco  build.sh  defs.bzl  defs.txt  genai_requirements.txt  index.html  pyproject.toml  requirements.txt  requirements_genai.txt  run_all.sh  setup.py  split_embedding_codegen_lookup_invokers.py  split_embedding_configs.py  split_table_batched_embeddings_ops.py  split_tbe_fwd_hip_kernel.hsaco  split_tbe_fwd_kernel.hsaco  version.py
fbgemm_gpu/bench/: CMakeLists.txt  README.md  batch_index_select_dim0_backward_bench.py  batched_unary_embeddings_benchmark.cu  batched_unary_embeddings_benchmark.py  bench_utils.py  benchmark_torch_function.py  group_gemm_ops_benchmark.py  histogram_binning_calibration_benchmark.py  jagged_tensor_benchmark.py  merge_embeddings_benchmark.py  quantize_ops_benchmark.cu  quantize_ops_benchmark.py  repeat_arange_benchmark.py  reproduce.sh  run_tbe_benchmark.py  sparse_ops_benchmark.py  split_embeddings_cache_benchmark.py  split_table_batched_embeddings_benchmark.py  ssd_table_batched_embeddings_benchmark.py  stride_gemm_benchmark.py  utils.py  verify_fp16_stochastic_algo.cu  verify_fp16_stochastic_benchmark.cu
fbgemm_gpu/cmake/: Asmjit.cmake  Fbgemm.cmake  Hip.cmake  Tbe.cmake  TbeInference.cmake  TbeTraining.cmake  tbe_sources.py
fbgemm_gpu/codegen/: __init__.template  batch_index_select_dim0_cpu_host.cpp  batch_index_select_dim0_host.cpp  embedding_autograd_split_host_pt2_template.cpp  embedding_backward_code_generator.py  embedding_backward_dense_host.cpp  embedding_backward_dense_host_cpu.cpp  embedding_backward_split_cpu_approx_template.cpp  embedding_backward_split_cpu_template.cpp  embedding_backward_split_device_kernel_template.cuh  embedding_backward_split_grad_template.cu  embedding_backward_split_host_cpu_pt2_template.cpp  embedding_backward_split_host_cpu_template.cpp  embedding_backward_split_host_pt2_template.cpp  embedding_backward_split_host_template.cpp  embedding_backward_split_indice_weights_template.cu  embedding_backward_split_kernel_cta_template.cu  embedding_backward_split_kernel_warp_template.cu  embedding_backward_split_meta_template.cpp  embedding_backward_split_template.cu  embedding_backward_template_helpers.cuh  embedding_bounds_check.cu  embedding_bounds_check_host.cpp  embedding_bounds_check_host_cpu.cpp  embedding_common.h  embedding_common_code_generator.py  embedding_forward_quantized_cpu_template.cpp  embedding_forward_quantized_host.cpp  embedding_forward_quantized_host.h  embedding_forward_quantized_host_cpu.cpp  embedding_forward_quantized_host_cpu.h  embedding_forward_quantized_split_lookup.cu  embedding_forward_quantized_split_lookup_template.cu  embedding_forward_quantized_split_nbit_host_template.cu  embedding_forward_quantized_split_nbit_kernel_template.cu  embedding_forward_quantized_split_nbit_template.cu  (+23 more)
test/: AssertTest.cc  Bfloat16ConvertTest.cc  CMakeLists.txt  EmbeddingSpMDM4BitTest.cc  EmbeddingSpMDM8BitTest.cc  EmbeddingSpMDMNBitTest.cc  EmbeddingSpMDMTest.cc  EmbeddingSpMDMTestUtils.cc  EmbeddingSpMDMTestUtils.h  EncodedBIm2ColFusedRequantizeTest.cc  FBGemmFPTest.h  FP16Test.cc  FP32Test.cc  FakeFP16Test.cc  FbgemmFeatureFlagTest.cc  Float16ConvertTest.cc  FloatReluTest.cc  Fused8BitRowwiseEmbLookupTest.cc  GConvTest.cc  I64Test.cc  I8DepthwiseFloatOutputTest.cc  I8DepthwiseTest.cc  I8DepthwiseTest.h  I8DirectconvTest.cc  I8SpmdmTest.cc  Im2ColFusedRequantizeTest.cc  PackAMatrixTransposeTest.cc  PackEncodedBRequantizeTest.cc  PackedEncodedARequantizeTest.cc  PackedRequantizeAcc16Test.cc  PackedRequantizeTest.cc  QuantUtilsTest.cc  QuantizationHelpers.cc  QuantizationHelpers.h  RadixSortTest.cc  RequantizeOnlyTest.cc  RowWiseSparseAdagradFusedTest.cc  SpConvFP32Test.cc  SpConvI8Test.cc  SpMMFP32Test.cc  (+11 more)
(+3902 files in other folders)
